Added GET gen_draft template and changed endpoint method
